@@ -1,6 +1,11 @@
 Changelog
 =========
 
+Features:
+---------
+
+* New formatter is added to export query result to sql format (such as sql-insert, sql-update).
+
 TBD
 -------------
 * don't escape newlines, etc. in ascii tables, and add ascii_escaped table format
